# llm-eval

./: .env.example  .gitignore  README.md  pyproject.toml  sample_scores.jsonl  scores.jsonl  scores_1.jsonl  scores_2.jsonl  test.py
data/: sample.tsv
src/llm_eval/: azure_client.py  cli.py  data.py  evaluator.py  prompting.py
src/llm_eval/metrics/: __init__.py  basic.py
tests/: test_multi_model.py  test_prompt_parse.py  test_smoke.py
